--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="./home.html">
+    <form action="./reset.html">
         <fieldset>
             <legend>login Page</legend>
         <label for="email">Enter Email id: </label>
